--- a/tests/catch/unit/memory/CMakeLists.txt
+++ b/tests/catch/unit/memory/CMakeLists.txt
@@ -34,6 +34,7 @@ set(TEST_SRC
     hipMemcpy2D.cc
     hipMemcpy2D_old.cc
     hipMemcpy2DAsync.cc
+    hipMemcpy2DAsync_old.cc
     hipMemcpy2DFromArray.cc
     hipMemcpy2DFromArrayAsync.cc
     hipMemcpyAtoH.cc
@@ -115,6 +116,7 @@ set(TEST_SRC
     hipMemcpy2D.cc
     hipMemcpy2D_old.cc
     hipMemcpy2DAsync.cc
+    hipMemcpy2DAsync_old.cc
     hipMemcpy2DFromArray.cc
     hipMemcpy2DFromArrayAsync.cc
     hipMemcpyAtoH.cc
