--- a/tests/catch/unit/module/CMakeLists.txt
+++ b/tests/catch/unit/module/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TEST_SRC
     hipModuleLoadDataEx.cc
     hipModuleUnload.cc
     hipModuleGetFunction.cc
+    hipModuleGetTexRef.cc
     hipModuleLaunchKernel.cc
 )
 
@@ -20,6 +21,11 @@ add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/get_function_module.code
                    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/get_function_module.cc)   
 add_custom_target(get_function_module ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/get_function_module.code)
 
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/get_tex_ref_module.code
+                   COMMAND ${CMAKE_CXX_COMPILER} --genco --std=c++17 ${CMAKE_CURRENT_SOURCE_DIR}/get_tex_ref_module.cc -o get_tex_ref_module.code
+                   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/get_tex_ref_module.cc)   
+add_custom_target(get_tex_ref_module ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/get_tex_ref_module.code)
+
 if(HIP_PLATFORM MATCHES "amd")
     set(RTCLIB "hiprtc")
 else()
@@ -31,3 +37,4 @@ hip_add_exe_to_target(NAME ModuleTest
                       LINKER_LIBS ${RTCLIB})
 add_dependencies(ModuleTest empty_module)
 add_dependencies(ModuleTest get_function_module)
+add_dependencies(ModuleTest get_tex_ref_module)
