Implement new tests.

--- a/tests/catch/unit/executionControl/CMakeLists.txt
+++ b/tests/catch/unit/executionControl/CMakeLists.txt
@@ -2,6 +2,8 @@ set(TEST_SRC
     hipFuncSetCacheConfig.cc
     hipFuncSetSharedMemConfig.cc
     hipFuncSetAttribute.cc
+    hipExtLaunchKernel.cc
+    hipLaunchCooperativeKernel.cc
 )
 
 hip_add_exe_to_target(NAME ExecutionControlTest
