Implement tests for hipSignalExternalSemaphoresAsync

--- a/tests/catch/unit/interop/CMakeLists.txt
+++ b/tests/catch/unit/interop/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TEST_SRC
     vulkan_test.cc
     hipWaitExternalSemaphoresAsync.cc
+    hipSignalExternalSemaphoresAsync.cc
    )
 
 hip_add_exe_to_target(NAME InteropTest
