--- a/tests/catch/unit/interop/CMakeLists.txt
+++ b/tests/catch/unit/interop/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TEST_SRC
     hipDestroyExternalSemaphore.cc
     hipWaitExternalSemaphoresAsync.cc
     hipSignalExternalSemaphoresAsync.cc
+    hipExternalMemoryGetMappedBuffer.cc
    )
 
 hip_add_exe_to_target(NAME InteropTest
