--- a/tests/catch/unit/CMakeLists.txt
+++ b/tests/catch/unit/CMakeLists.txt
@@ -33,7 +33,8 @@ add_subdirectory(kernel)
 add_subdirectory(multiThread)
 add_subdirectory(compiler)
 add_subdirectory(errorHandling)
-add_subdirectory(interop)
 if(HIP_PLATFORM STREQUAL "amd")
 add_subdirectory(clock)
+# Vulkan interop APIs currently undefined for NVIDIA
+add_subdirectory(vulkan_interop)
 endif()
