--- a/tests/catch/unit/interop/CMakeLists.txt
+++ b/tests/catch/unit/interop/CMakeLists.txt
@@ -1,5 +1,4 @@
 set(TEST_SRC
-    interop_common.cc
     hipGLGetDevices.cc
     hipGraphicsGLRegisterBuffer.cc
     hipGraphicsGLRegisterImage.cc
@@ -16,4 +15,5 @@ hip_add_exe_to_target(NAME InteropTest
                       COMPILE_OPTIONS -std=c++17)
 
 find_package(OpenGL REQUIRED COMPONENTS OpenGL EGL)
-target_link_libraries(InteropTest OpenGL::GL OpenGL::EGL)
+find_package(GLUT REQUIRED)
+target_link_libraries(InteropTest OpenGL::GL OpenGL::EGL GLUT::GLUT)
